# reserved-plugins

./: Cargo.toml  README.md
.changes/: config.json  initial-release.md  pre.json
.github/workflows/: covector-version-or-publish.yml
crates/tauri-plugin-core/: CHANGELOG.md  Cargo.toml
crates/tauri-plugin-core/src/: lib.rs
crates/tauri-plugin-tauri/: CHANGELOG.md  Cargo.toml
crates/tauri-plugin-tauri/src/: lib.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
